/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package ordererspbftpb;

//import "availabilitypb/availabilitypb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/ordererspbftpb";

// ============================================================
// Messages
// ============================================================

message Preprepare {
  uint64 sn = 1;
  uint64 view = 2;
  bytes data = 3;
  bool aborted = 4;
}

message Prepare {
  uint64 sn = 1;
  uint64 view = 2;
  bytes digest = 3;
}

message Commit {
  uint64 sn = 1;
  uint64 view = 2;
  bytes digest = 3;
}

message Done {
  repeated bytes digests = 1;
}

message CatchUpRequest {
  bytes  digest = 1;
  uint64 sn     = 2;
}

message ViewChange {
  uint64             view       = 1;
  repeated PSetEntry p_set      = 2;
  repeated QSetEntry q_set      = 3;
}

message SignedViewChange {
  ViewChange view_change = 1;
  bytes      signature   = 2;
}

message NewView {
  uint64                    view                = 1;
  repeated string           view_change_senders = 3;
  repeated SignedViewChange signed_view_changes = 2;
  repeated uint64           preprepare_seq_nrs  = 4;
  repeated Preprepare       preprepares         = 5;
}

message PSetEntry {
  uint64 sn     = 1;
  uint64 view   = 2;
  bytes  digest = 3;
}

message QSetEntry {
  uint64 sn     = 1;
  uint64 view   = 2;
  bytes  digest = 3;
}

message PreprepareRequest {
  bytes  digest = 1;
  uint64 sn     = 2;
}

// ============================================================
// Events
// ============================================================

message ReqWaitReference {
  uint64   sn = 1;
  uint64 view = 2;
}

message VCSNTimeout {
  uint64 view         = 1;
  uint64 numCommitted = 2;
}

// ============================================================
// Status
// ============================================================

message Status {
  // TODO: Add the representation of the state of a PBFT instance here.
}
